# qwerty

./: .dockerignore  .gitlab-ci.yml  Dockerfile  Makefile  deploy.sh  deploy_no_docker.sh  pyproject.toml  touch
.github/workflows/: deploy.yml
src/: __init__.py  database.py  main.py
src/.github/workflows/: deploy.yml
tests/: __init__.py  conftest.py  test_users.py
